[gd_scene load_steps=31 format=2]

[ext_resource path="res://Assets/Cutscenes/NextDialogue.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Cutscenes/DialogueBox/DialogueContainer.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/[labels] basis33.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/Cutscenes/Win/Win.gd" type="Script" id=4]
[ext_resource path="res://Assets/Cutscenes/Win Cutscene/vecteezy_sign-of-herd-immunity-of-crowd-people-throw-their-mask-on-the-sky_.png" type="Texture" id=5]
[ext_resource path="res://Assets/Cutscenes/Win Cutscene/why-is-a-global-vaccine-rollout-vital-020321.png" type="Texture" id=6]
[ext_resource path="res://Assets/Cutscenes/Win Cutscene/A Corruptor Caught In A Mouse Trap.png" type="Texture" id=7]
[ext_resource path="res://Assets/Cutscenes/earth_spritesheet.png" type="Texture" id=8]

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 750, 750 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 750, 0, 750, 750 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1500, 0, 750, 750 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 2250, 0, 750, 750 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 3000, 0, 750, 750 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 3750, 0, 750, 750 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 4500, 0, 750, 750 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 5250, 0, 750, 750 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 6000, 0, 750, 750 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 6750, 0, 750, 750 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 7500, 0, 750, 750 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 8250, 0, 750, 750 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 9000, 0, 750, 750 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 9750, 0, 750, 750 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 10500, 0, 750, 750 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 11250, 0, 750, 750 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 12000, 0, 750, 750 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 12750, 0, 750, 750 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 13500, 0, 750, 750 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 14250, 0, 750, 750 )

[sub_resource type="SpriteFrames" id=46]
animations = [ {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=1]
size = 76
font_data = ExtResource( 3 )

[node name="Win" type="Node2D"]
script = ExtResource( 4 )

[node name="WinCutsceneUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -2920.0
margin_bottom = -1400.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG color" type="ColorRect" parent="WinCutsceneUI"]
anchor_right = 74.0
anchor_bottom = 36.0
margin_right = 2960.0
margin_bottom = 1440.0
color = Color( 0.752941, 0.901961, 0.709804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Herd Immunity" type="Sprite" parent="WinCutsceneUI"]
position = Vector2( 1458, 666 )
scale = Vector2( 0.937891, 0.937891 )
texture = ExtResource( 5 )

[node name="International" type="Sprite" parent="WinCutsceneUI"]
visible = false
position = Vector2( 1464, 570 )
scale = Vector2( 1.34947, 1.34947 )
texture = ExtResource( 6 )

[node name="Caught" type="Sprite" parent="WinCutsceneUI"]
visible = false
position = Vector2( 1464, 570 )
scale = Vector2( 1.34947, 1.34947 )
texture = ExtResource( 7 )

[node name="Earth" type="AnimatedSprite" parent="WinCutsceneUI"]
visible = false
position = Vector2( 1480, 720 )
scale = Vector2( 1.35, 1.35 )
frames = SubResource( 46 )
frame = 8
speed_scale = 0.35
playing = true

[node name="Dialogue" type="CanvasLayer" parent="WinCutsceneUI"]

[node name="DialogueBox" type="TextureRect" parent="WinCutsceneUI/Dialogue"]
anchor_right = 1.85
margin_left = 9.0
margin_top = 920.0
margin_right = -2523.0
margin_bottom = 1432.0
texture = ExtResource( 2 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="WinCutsceneUI/Dialogue/DialogueBox"]
anchor_left = 0.025
anchor_top = 0.18
anchor_right = 0.981
anchor_bottom = 0.791
margin_left = 106.4
margin_top = -0.160004
margin_right = -145.064
margin_bottom = 0.00799561
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="WinCutsceneUI/Dialogue/DialogueBox/MarginContainer"]
visible = false
margin_right = 2563.0
margin_bottom = 313.0

[node name="Message" type="Label" parent="WinCutsceneUI/Dialogue/DialogueBox/MarginContainer"]
margin_right = 2563.0
margin_bottom = 313.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.607843, 0.133333, 0.133333, 1 )
custom_fonts/font = SubResource( 1 )
text = "Placeholder text:"
autowrap = true
clip_text = true

[node name="NextDialogue" parent="WinCutsceneUI/Dialogue" instance=ExtResource( 1 )]

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="WinCutsceneUI/Dialogue/NextDialogue" to="." method="_on_NextDialogue_pressed"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
